# near-abi-py

./: .gitignore  CHANGELOG.md  README.md  contract.py  pyproject.toml  result.json
.github/workflows/: lint.yml  release.yml
contract/: main.py  other.py
contract/utils/: big.py
examples/: contract.py
src/near_abi_py/: __init__.py  cli.py  core.py  generator.py  scanner.py  schema.py  type_analyzer.py  types.py  utils.py
src/near_abi_py/analyzer/: __init__.py  function.py  inspector.py  loader.py
src/near_abi_py/cli/: __init__.py  commands.py
src/near_abi_py/core/: __init__.py  constants.py  metadata.py  schema.py  types.py  utils.py
src/near_abi_py/generator/: __init__.py  builder.py
tests/: conftest.py  test_generator.py  test_named_tuple.py  test_schema_gen.py  test_type_handler.py  test_utils.py
tests/fixtures/: basic_contract.py  complex_types.py  empty_contract.py  invalid_syntax.py
tests/fixtures/multi_file_project/: main.py
tests/fixtures/multi_file_project/models/: account.py
